--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,9 @@
         android:layout_centerInParent="true"
         android:id="@+id/textView"
         android:textSize="32sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:text="@string/app_name"
+        android:textAlignment="center"/>
 
 
 </RelativeLayout>
